Format code with Black, modify how data is acquired with bash script

--- a/notebooks/GetShapeFiles.ipynb
+++ b/notebooks/GetShapeFiles.ipynb
@@ -27,12 +27,13 @@
    "source": [
     "import easysnowdata\n",
     "import pandas as pd\n",
-    "import geopandas as gpd \n",
+    "import geopandas as gpd\n",
     "import ee\n",
     "import numpy as np\n",
     "import time\n",
     "from shapely.geometry import box\n",
-    "#import contextily as ctx"
+    "\n",
+    "# import contextily as ctx"
    ]
   },
   {
@@ -53,7 +54,7 @@
     }
    ],
    "source": [
-    "ee.Authenticate() "
+    "ee.Authenticate()"
    ]
   },
   {
@@ -163,7 +164,7 @@
     }
    ],
    "source": [
-    "print(huc04_gdf.shape) \n",
+    "print(huc04_gdf.shape)\n",
     "huc04_gdf.head(2)"
    ]
   },
@@ -176,11 +177,13 @@
    "source": [
     "# function that filters a gdf with a huc4 column to including ony\n",
     "# those hucs in a specific huc02 area (01-17); default is PNW (17)\n",
-    "def filter_by_HUC02 (gdf, huc_02_region = \"17\"): \n",
-    "    filtered_04 = gdf[gdf['huc4'].str.startswith(huc_02_region)]\n",
-    "    print(f\"There are {filtered_04.shape[0]} HUC04 regions within HUCO2 region {huc_02_region}\")\n",
-    "    #print(\"Full name list is:\")\n",
-    "    #print(filtered_04[\"name\"])\n",
+    "def filter_by_HUC02(gdf, huc_02_region=\"17\"):\n",
+    "    filtered_04 = gdf[gdf[\"huc4\"].str.startswith(huc_02_region)]\n",
+    "    print(\n",
+    "        f\"There are {filtered_04.shape[0]} HUC04 regions within HUCO2 region {huc_02_region}\"\n",
+    "    )\n",
+    "    # print(\"Full name list is:\")\n",
+    "    # print(filtered_04[\"name\"])\n",
     "    return filtered_04"
    ]
   },
@@ -269,7 +272,7 @@
     }
    ],
    "source": [
-    "# Example - Find the Huc04 Regions for the PNW \n",
+    "# Example - Find the Huc04 Regions for the PNW\n",
     "huc_02_region = \"16\"\n",
     "filtered_04 = filter_by_HUC02(huc04_gdf, huc_02_region)\n",
     "filtered_04.head(2)"
@@ -291,13 +294,14 @@
    "outputs": [],
    "source": [
     "# function that creates an outer boundary box for a given geometry\n",
-    "def create_bbox (sp): \n",
+    "def create_bbox(sp):\n",
     "    minx, miny, maxx, maxy = sp.bounds\n",
     "    bbox = box(minx, miny, maxx, maxy)\n",
     "    return bbox\n",
     "\n",
+    "\n",
     "# function that adds a crude bounding box to each geometry in the gdf\n",
-    "def add_bbox (gdf): \n",
+    "def add_bbox(gdf):\n",
     "    result = gdf.copy()\n",
     "    result[\"bbox\"] = gdf[\"geometry\"].apply(create_bbox)\n",
     "    return result"
@@ -389,7 +393,7 @@
    ],
    "source": [
     "filtered_04_bbox = add_bbox(filtered_04)\n",
-    "filtered_04_bbox.head(2)\n"
+    "filtered_04_bbox.head(2)"
    ]
   },
   {
@@ -407,16 +411,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function that returns huc geometries given a bounding box and huc level (default = 10) \n",
-    "def get_huc(bbox, huc_04_nm, huc_04_num, huc_level = \"10\"):\n",
-    "    gdf = easysnowdata.hydroclimatology.get_huc_geometries(bbox_input=bbox, huc_level=huc_level)\n",
-    "    \n",
-    "    #discard overinclusive entries that don't match huc_04 starting string\n",
-    "    huc_str=gdf.iloc[:, 1]\n",
+    "# function that returns huc geometries given a bounding box and huc level (default = 10)\n",
+    "def get_huc(bbox, huc_04_nm, huc_04_num, huc_level=\"10\"):\n",
+    "    gdf = easysnowdata.hydroclimatology.get_huc_geometries(\n",
+    "        bbox_input=bbox, huc_level=huc_level\n",
+    "    )\n",
+    "\n",
+    "    # discard overinclusive entries that don't match huc_04 starting string\n",
+    "    huc_str = gdf.iloc[:, 1]\n",
     "    idx = huc_str.str.startswith(huc_04_num)\n",
     "    gdf = gdf.loc[idx]\n",
-    "    \n",
-    "    print(f\"There are {gdf.shape[0]} HUC{huc_level} regions within {huc_04_nm}, huc region: {huc_04_num}\")\n",
+    "\n",
+    "    print(\n",
+    "        f\"There are {gdf.shape[0]} HUC{huc_level} regions within {huc_04_nm}, huc region: {huc_04_num}\"\n",
+    "    )\n",
     "    return gdf"
    ]
   },
@@ -505,13 +513,12 @@
     }
    ],
    "source": [
-    "# get low level HUCs for the Puget Sound region \n",
-    "huc_04 = filtered_04_bbox.iloc[0] # choose the first huc04 in the filtered region\n",
+    "# get low level HUCs for the Puget Sound region\n",
+    "huc_04 = filtered_04_bbox.iloc[0]  # choose the first huc04 in the filtered region\n",
     "huc_04_nm = huc_04[\"name\"]\n",
     "huc_04_num = huc_04[\"huc4\"]\n",
-    "hucXX_gdf = get_huc(huc_04[\"bbox\"], huc_04_nm, huc_04_num, huc_level = \"10\")\n",
-    "hucXX_gdf.head(2)\n",
-    "\n"
+    "hucXX_gdf = get_huc(huc_04[\"bbox\"], huc_04_nm, huc_04_num, huc_level=\"10\")\n",
+    "hucXX_gdf.head(2)"
    ]
   },
   {
@@ -531,21 +538,23 @@
    "source": [
     "# function that produces a gdf of all huc_X geometries within a specificed huc_02 (default is 17)\n",
     "# Assumes that you have already downloaded huc04_gdf\n",
-    "def all_huc_geos(huc_04_gdf, huc_02_name = \"17\", huc_level = \"10\"):\n",
-    "    huc_04_filtered = filter_by_HUC02(huc04_gdf, huc_02_name).sort_values(by=huc04_gdf.columns[1])\n",
+    "def all_huc_geos(huc_04_gdf, huc_02_name=\"17\", huc_level=\"10\"):\n",
+    "    huc_04_filtered = filter_by_HUC02(huc04_gdf, huc_02_name).sort_values(\n",
+    "        by=huc04_gdf.columns[1]\n",
+    "    )\n",
     "    filtered_04_bbox = add_bbox(huc_04_filtered)\n",
     "    results = gpd.GeoDataFrame()\n",
-    "    for i in range (filtered_04_bbox.shape[0]):\n",
+    "    for i in range(filtered_04_bbox.shape[0]):\n",
     "        huc_04 = filtered_04_bbox.iloc[i]\n",
     "        huc_04_nm = huc_04[\"name\"]\n",
     "        huc_04_num = huc_04[\"huc4\"]\n",
     "        print(f\"Gathering the sub-regions within {huc_04_nm}, huc region: {huc_04_num}\")\n",
-    "        hucXX_gdf = get_huc(huc_04[\"bbox\"], huc_04_nm, huc_04_num, huc_level = \"10\")\n",
-    "        if i == 0: \n",
+    "        hucXX_gdf = get_huc(huc_04[\"bbox\"], huc_04_nm, huc_04_num, huc_level=\"10\")\n",
+    "        if i == 0:\n",
     "            results = hucXX_gdf\n",
-    "        else: \n",
+    "        else:\n",
     "            results = pd.concat([results, hucXX_gdf], ignore_index=True)\n",
-    "            \n",
+    "\n",
     "    return results"
    ]
   },
@@ -660,7 +669,7 @@
     "start_time = time.time()\n",
     "huc_02 = \"18\"\n",
     "huc_level = \"10\"\n",
-    "huc10 = all_huc_geos(huc04_gdf, huc_02_name=huc_02, huc_level = huc_level)\n",
+    "huc10 = all_huc_geos(huc04_gdf, huc_02_name=huc_02, huc_level=huc_level)\n",
     "end_time = time.time()\n",
     "print(f\"Time elapsed: {end_time - start_time:.2f} seconds\")\n",
     "huc10.head(2)"
@@ -713,18 +722,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def splitfiles(huc10): \n",
+    "def splitfiles(huc10):\n",
     "    f_outA = f\"huc{huc_level}_in_{huc_02}_A\"\n",
     "    f_outB = f\"huc{huc_level}_in_{huc_02}_B\"\n",
     "    rows = huc10.shape[0]\n",
-    "    split_idx = int(rows/2)\n",
+    "    split_idx = int(rows / 2)\n",
     "    huc10A = huc10.iloc[0:split_idx, :]\n",
-    "    huc10B = huc10.iloc[split_idx:,:]\n",
+    "    huc10B = huc10.iloc[split_idx:, :]\n",
     "    huc10A.to_file(f_outA, driver=\"ESRI Shapefile\")\n",
-    "    huc10B.to_file(f_outB, driver=\"ESRI Shapefile\")\n",
-    "\n",
-    "\n",
-    "    "
+    "    huc10B.to_file(f_outB, driver=\"ESRI Shapefile\")"
    ]
   },
   {
@@ -745,8 +751,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " f_outA = f\"huc{huc_level}_in_{huc_02}_A\"\n",
-    " f_outB = f\"huc{huc_level}_in_{huc_02}_B\""
+    "f_outA = f\"huc{huc_level}_in_{huc_02}_A\"\n",
+    "f_outB = f\"huc{huc_level}_in_{huc_02}_B\""
    ]
   },
   {
