correct typo in viz Mismatch notebook

--- a/notebooks/VizMizmach.ipynb
+++ b/notebooks/VizMizmach.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "# create a map of Mount Baker and ~5 mile radius around it\n",
+    "# create a map of Mount Baker and 16 km radius around it\n",
     "mount_baker_coords = (48.773, -121.8132)\n",
     "radius_km = 16\n",
     "\n",
