Update and rename Skagit.md to Skagit(17110005).md

--- a/docs/basin_fact_sheets/Skagit(17110005).md
+++ b/docs/basin_fact_sheets/Skagit(17110005).md
@@ -18,4 +18,11 @@ Snow Classification Data Reference:
 - Sturm, M., and G. E. Liston, 2021: Revisiting the global seasonal snow classification: An updated dataset for Earth System applications.  Journal of Hydrometeorology, 22, 2917-2938, https://doi.org/10.1175/JHM-D-21-0070.1.
 - Liston, G. E., and M. Sturm, 2021: Global Seasonal-Snow Classification, Version 1. National Snow and Ice Data Center, https://doi.org/10.5067/99FTCYYYLAQ0.
 
+## Skagit Elevation Map 
+![Elevation Map](../basic_maps/dem_huc17110005.png)
+
+Elevation Data Reference 
+- Copernicus Global Digital Elevation Models, at 90 m scale (COP90)
+- European Space Agency (2024).  <i>Copernicus Global Digital Elevation Model</i>.  Distributed by OpenTopography. 
+
 
