--- a/docs/basin_fact_sheets/Skagit(17110005).md
+++ b/docs/basin_fact_sheets/Skagit(17110005).md
@@ -9,6 +9,8 @@
 - Montane Forest: 3
 - Ephemeral: 2
 
+  Note: XX of the Huc12 units within Skagit/17110005 are located wholly or primarily in Canada, and thus SWE data was unavailable.  These subunits were not included in the analysis. 
+
 
 ## Skagit Map with Snow Classification 
 
