--- a/notebooks/Prototype_Model_Results/VizHuc10Compare.ipynb
+++ b/notebooks/Prototype_Model_Results/VizHuc10Compare.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0a8ea9b8-e4f5-410c-90cd-bd7a09c6c86d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "1e0f482b-6ff1-41bc-be88-574feaf83f96",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d07ec993-08ff-47df-909c-899564171ede",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "80d0cafc-3281-4f1f-935e-630e4b0e470e",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "8c2f20af-3249-46ca-ad49-b4b18b3e3163",
    "metadata": {},
    "outputs": [],
@@ -127,12 +127,12 @@
     "# define our run_ids by recognizable names \n",
     "orig_30 = \"0d8be0dc44a447099f7901c83032a59e\"  # orig data, 30 epochs, MLflow name is legendary toad 940 \n",
     "orig_200 = \"41f1a7b318f94b2bb2c4fdfbf892a018\"  # (orig data, 200 epochs, MLflow name is clumsy-ray-666\n",
-    "# new_80"
+    "new_10 = \"69d929bbdfdd43b4a2f45b823d945eb7\" # new data 10 epochs, ML flow name is dapper pig 680"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "6e186644-c6cd-4131-bcfb-58a57229eeb6",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "2788a3a6-1a97-4b98-8aca-ab35a329af5f",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "13  1711000511_test_kge  0.513360"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "95cef692-3d32-4153-96b1-f4c443e31bce",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "959ab8df-d31c-4af0-921e-8b5ef902a8d4",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "12  1711000511_test_kge  0.528663"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "4687f0ae-28f5-4c3d-b8c9-f47bad761770",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "c85989b5-e324-430b-82c3-e3b9748e09b1",
    "metadata": {},
    "outputs": [
@@ -425,8 +425,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "785ac15d-85c6-4bb3-8d24-c0791df329d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new10 = load_ml_metrics(tracking_uri, new_10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6022fdae-ac80-4b5b-9aba-8bb56f85197b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Step</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>train_mse_170103040305</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.029135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>train_mse_170103040305</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.008264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>train_mse_170103040305</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.003490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>train_mse_170103040305</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.002993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>train_mse_170103040305</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.002356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3589</th>\n",
+       "      <td>train_mse_170200100101</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.002884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3590</th>\n",
+       "      <td>train_mse_170200100101</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.002963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3591</th>\n",
+       "      <td>train_mse_170200100101</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.002589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3592</th>\n",
+       "      <td>train_mse_170200100101</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.004654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3593</th>\n",
+       "      <td>train_mse_170200100101</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.002564</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3594 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Metric  Step     Value\n",
+       "0     train_mse_170103040305     0  0.029135\n",
+       "1     train_mse_170103040305     1  0.008264\n",
+       "2     train_mse_170103040305     2  0.003490\n",
+       "3     train_mse_170103040305     3  0.002993\n",
+       "4     train_mse_170103040305     4  0.002356\n",
+       "...                      ...   ...       ...\n",
+       "3589  train_mse_170200100101     4  0.002884\n",
+       "3590  train_mse_170200100101     5  0.002963\n",
+       "3591  train_mse_170200100101     6  0.002589\n",
+       "3592  train_mse_170200100101     7  0.004654\n",
+       "3593  train_mse_170200100101     8  0.002564\n",
+       "\n",
+       "[3594 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f1c505-cd20-4867-9676-3bb26915e930",
    "metadata": {},
    "outputs": [],
    "source": []
