create notebook to visualize results by HUC

--- a/notebooks/Prototype_Model_Results/VizHuc10Compare.ipynb
+++ b/notebooks/Prototype_Model_Results/VizHuc10Compare.ipynb
@@ -13,7 +13,7 @@
    "id": "c6624b8e-4a56-4933-a375-da6f85e2e758",
    "metadata": {},
    "source": [
-    "# Step 0 = Set up Notebook"
+    "# Step 0 - Set up Notebook"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "id": "e0d212b4-aa21-4830-9e9c-26eff136b0e7",
    "metadata": {},
    "source": [
-    "# Step1 - Download ML Metrics"
+    "# Step1 - Download MLFlow Metrics"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
