update files, download train metrics

--- a/notebooks/Ex2_VarianceByHuc/DownloadMetrics.ipynb
+++ b/notebooks/Ex2_VarianceByHuc/DownloadMetrics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4a4332eb-7cfb-4393-b40c-b03d9d4a9f9f",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7685f08a-2239-4e0c-9598-65341d3cb0e0",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "77a4451e-b371-438b-8a1f-c8a712bf5af7",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4f76a38a-ea28-4900-bb00-0db9fabdf52e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "55dda699-c626-496e-b2eb-a9cfaa9cb98a",
    "metadata": {},
    "outputs": [],
@@ -154,28 +154,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e79ec35d-0577-4d72-a62d-642f354682d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# set mlFlow tracking server\n",
     "tracking_uri = \"arn:aws:sagemaker:us-west-2:677276086662:mlflow-tracking-server/dawgsML\"\n",
-    "# define our run_ids by recognizable names; local training spread over 3 runs \n",
-    "multi_hucs = \"7bc43aac04414e989fb0fb3a244b138e\" # lyrical-wren; 30 epochs, all M&M hucs"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b83fa84-bc7b-4da8-8c1e-87e48d9a0f50",
+   "metadata": {},
+   "source": [
+    "# Download Metrics Re: validation set \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "a5d942f9-f5e2-4610-bd2f-f57a8ee29f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define our run_ids by recognizable names\n",
+    "multi_hucs = \"7bc43aac04414e989fb0fb3a244b138e\" # lyrical-wren; Validation Set.  30 epochs MandM\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d1df458-3447-4076-99d8-d97551d653aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metrics  = load_ml_metrics(tracking_uri, multi_hucs, save_local=True)\n",
+    "print(df_metrics.shape)\n",
+    "df_metrics.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43b37f1a-f3c5-4650-86ac-037166e7ef6b",
+   "metadata": {},
+   "source": [
+    "# Download Metrics Re: Training Set Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cf80172e-02c7-4bfa-91fe-5d153d605c74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define our run_ids by recognizable names\n",
+    "train_metrics = \"5f37d241bcc540f78a00814bae222ca3\" #Auspicious-mare.  Predict on training set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "13ce5333-9aa2-40a8-aad6-b82d632a0839",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6750, 3)\n"
+      "(656, 3)\n"
      ]
     },
     {
@@ -207,15 +256,81 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>test_kge_170602070902</td>\n",
+       "      <td>train_kge_171100060303</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.826216</td>\n",
+       "      <td>-500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>test_kge_170602070902</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.876016</td>\n",
+       "      <td>train_kge_171100090101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Metric  Step  Value\n",
+       "0  train_kge_171100060303     0 -500.0\n",
+       "1  train_kge_171100090101     0 -500.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_metrics_train = load_ml_metrics(tracking_uri, train_metrics, save_local=False)\n",
+    "print(df_metrics_train.shape)\n",
+    "df_metrics_train.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f448d149-e3ea-4579-8cdd-82d75ebc4cd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Step</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>test_kge_171100060101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.690896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>test_mse_170103040201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.002256</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -223,19 +338,119 @@
       ],
       "text/plain": [
        "                  Metric  Step     Value\n",
-       "0  test_kge_170602070902     0  0.826216\n",
-       "1  test_kge_170602070902     1  0.876016"
+       "2  test_kge_171100060101     0  0.690896\n",
+       "4  test_mse_170103040201     0  0.002256"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_metrics  = load_ml_metrics(tracking_uri, multi_hucs, save_local=True)\n",
-    "print(df_metrics.shape)\n",
-    "df_metrics.head(2)"
+    "# here \"test_kge\"/\"test_mse\" are actually the *training values* so make that adjustment\n",
+    "# Drop rows where Value is -500 (-500 is just a placeholder . . .)\n",
+    "df_metrics_train = df_metrics_train[df_metrics_train[\"Value\"] != -500]\n",
+    "df_metrics_train.head(2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "db82ffd4-45ae-434e-be92-f4b9814872a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1041/3380904258.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_metrics_train[\"Metric\"] = df_metrics_train[\"Metric\"].str.replace(\"test\", \"train\", regex=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_metrics_train[\"Metric\"] = df_metrics_train[\"Metric\"].str.replace(\"test\", \"train\", regex=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "61659194-6f81-49ea-995e-642f7950316e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Step</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>train_kge_171100060101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.690896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>train_mse_170103040201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.002256</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Metric  Step     Value\n",
+       "2  train_kge_171100060101     0  0.690896\n",
+       "4  train_mse_170103040201     0  0.002256"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_metrics_train.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167c31fc-bfbd-4feb-8426-ac614a0b67c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save local\n",
+    "f_out = f\"run_id_data/training_set_metrics.csv\"\n",
+    "df_metrics_train.to_csv(f_out, index=False)"
    ]
   }
  ],
