--- a/notebooks/Ex3_MultiHucTraining/Choose_Best_Model.ipynb
+++ b/notebooks/Ex3_MultiHucTraining/Choose_Best_Model.ipynb
@@ -269,7 +269,7 @@
     "        plt.plot(df.index, df['median'], marker='o', linestyle='-', label=label)\n",
     "    \n",
     "    # Labels and title\n",
-    "    plt.xlabel('Step')\n",
+    "    plt.xlabel('Epoch')\n",
     "    plt.ylabel('Median Value')\n",
     "    plt.title(title)\n",
     "    plt.ylim(-1, 1)  # Set fixed y-axis range\n",
