update Ex3 notebooks

--- a/notebooks/Ex3_MultiHucTraining/Choose_Best_Model.ipynb
+++ b/notebooks/Ex3_MultiHucTraining/Choose_Best_Model.ipynb
@@ -100,6 +100,7 @@
    "outputs": [],
    "source": [
     "# create a dictionary of dataframes corresponding to the run_id shortname uploading from local files \n",
+    "# Assumes you have already run the \"download metrics\" script from the snowML.Scripts package to save the metrics to local files\n",
     "df_dict = {}\n",
     "for key in run_dict.keys(): \n",
     "    run_id = run_dict[key]\n",
