--- a/docs/basin_fact_sheets/Skagit(17110005).md
+++ b/docs/basin_fact_sheets/Skagit(17110005).md
@@ -5,11 +5,11 @@
 **Huc No:**           17110005 <br> 
 **Predominant Snow:** Maritime <br>
 **Huc 12 Sub Units By Predominant Snow Classification:**
-- Maritime: 52
+- Maritime: 52 (40 in the US)
 - Montane Forest: 3
 - Ephemeral: 2
 
-  Note: XX of the Huc12 units within Skagit/17110005 are located wholly or primarily in Canada, and thus SWE data was unavailable.  These subunits were not included in the analysis. 
+Note: 12 of the Huc12 units within Skagit/17110005 are located above the 49th parallell, wholly or primarily in Canada, and thus SWE data was unavailable.  These subunits were not included in the analysis for Expirement 1 or 2. 
 
 
 ## Skagit Map with Snow Classification 
