--- a/docs/basin_fact_sheets/Skagit(17110005).md
+++ b/docs/basin_fact_sheets/Skagit(17110005).md
@@ -4,12 +4,19 @@
 **Name:**             Skagit <br>
 **Huc No:**           17110005 <br> 
 **Predominant Snow:** Maritime <br>
+
+**Huc 10 Sub Units By Predominant Snow Classification:**
+- Maritime   10 (7 in the US)
+- Ephemeral 1
+
+Note: 3 of the Huc10 units within Skagit/17110005 are located above the 49th parallell, wholly or primarily in Canada, and thus SWE data was unavailable.  These subunits were not included in the analysis for Expirement 1. 
+
 **Huc 12 Sub Units By Predominant Snow Classification:**
 - Maritime: 52 (40 in the US)
 - Montane Forest: 3
 - Ephemeral: 2
 
-Note: 12 of the Huc12 units within Skagit/17110005 are located above the 49th parallell, wholly or primarily in Canada, and thus SWE data was unavailable.  These subunits were not included in the analysis for Expirement 1 or 2. 
+Note: 12 of the Huc12 units within Skagit/17110005 are located above the 49th parallell, wholly or primarily in Canada, and thus SWE data was unavailable.  These subunits were not included in the analysis for Expirement 2. 
 
 
 ## Skagit Map with Snow Classification 
