Add earthengine credential initialize to datapipe notebook

--- a/notebooks/DataPipe.ipynb
+++ b/notebooks/DataPipe.ipynb
@@ -22,7 +22,7 @@
    "id": "c0d91080-d3c5-4d01-9c21-a53abea72ea1",
    "metadata": {},
    "source": [
-    "Before running the cell below, you will need to install and import the snowML module.  This can be achieved by cloning the repo at https://github.com/DSHydro/SnowML.git, navigating to the SnowML directory, and running `pip install .` from the command line.  "
+    "Before running the cell below, you will need to install and import the snowML module.  This can be achieved by cloning the repo at https://github.com/DSHydro/SnowML.git, navigating to the SnowML directory, and running `pip install .` from the command line.  You may also need to separately run ```pip install eaasysnowdata ```"
    ]
   },
   {
@@ -82,6 +82,16 @@
    ],
    "source": [
     "ee.Authenticate(auth_mode='notebook')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9145ab62-1fba-4ab9-ae1d-a5cdcecb99b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ee.Initialize(project = \"ee-frostydawgs\") # Relace with your project name \n"
    ]
   },
   {
