--- a/notebooks/Ex3_MultiHucTraining/Choose_Best_Model.ipynb
+++ b/notebooks/Ex3_MultiHucTraining/Choose_Best_Model.ipynb
@@ -94,17 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "72f9cff8-9dd6-4f87-a22f-e7fe7268ae88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'run_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# create a dictionary of dataframes corresponding to the run_id shortname uploading from local files \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Assumes you have already run the \"download metrics\" script from the snowML.Scripts package to save the metrics to local files\u001b[39;00m\n\u001b[1;32m      3\u001b[0m df_dict \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m run_dict\u001b[38;5;241m.\u001b[39mkeys(): \n\u001b[1;32m      5\u001b[0m     run_id \u001b[38;5;241m=\u001b[39m run_dict[key]\n\u001b[1;32m      6\u001b[0m     file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../mlflow_data/run_id_data/metrics_from_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrun_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'run_dict' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# create a dictionary of dataframes corresponding to the run_id shortname uploading from local files \n",
     "# Assumes you have already run the \"download metrics\" script from the snowML.Scripts package to save the metrics to local files\n",
     "df_dict = {}\n",
     "for key in run_dict.keys(): \n",
     "    run_id = run_dict[key]\n",
-    "    file = f\"../../data/run_id_data/metrics_from_{run_id}.csv\"\n",
+    "    file = f\"../../mlflow_data/run_id_data/metrics_from_{run_id}.csv\"\n",
     "    df_metrics = pd.read_csv(file)\n",
     "    #print(df_metrics.shape)\n",
     "    df_dict[key] = df_metrics\n"
